Change log
==========

1.0.2 (2019-11-06)
------------------

* Ping confirms the connection handle validity
* Unit tests for ABAP errors
* SAP NWRFC SDK version shell scripts

1.0.1 (2019-10-09)
------------------

* Min NodeJS version fixed in package.json, per https://nodejs.org/dist/latest/docs/api/n-api.html#n_api_n_api_version_matrix
* README: N-API badge added
* ABAP decimal floating point data types added: RFCTYPE_DECF16 and RFCTYPE_DECF34

1.0.0 (2019-10-02)
------------------

* NAPI 1.0.0 RC merged back to master 1.0.0 release
* Build documentation update

1.0.0-rc11 (2019-10-01)
-----------------------

* NodeJS version 6 dropped
* Input parameter array check added, fix #100
* Connection options support in Conncetion Pool, fix #104
* Build tools changed, node-gyp and node-pregyp replaced with cmake-js and prebuild, fix #72

1.0.0-rc10 (2019-05-31)
-----------------------

* Revert to node-pre-gyp@12.0, node-pre-gyp#463

1.0.0-rc9 (2019-05-23)
----------------------

* Dependencies clean-up, reducing peer dependencies
* READMEs and examples clean-up

1.0.0-rc8 (2019-05-22)
----------------------

* SAP NW RFC SDK loading error message
* jest test framework
* npm install --build-from-source fix #85
* tar security audit fix
* Option added to filter IMPORT or CHANGING parameters from the result set
* RFC_INT8 ABAP type support added
* .gitignore fix for vscode https://github.com/Microsoft/vscode-cpptools/issues/3347
* node v6 support dropped, v12 support added

1.0.0-rc7 (2018-12-10)
----------------------

* N-API, asynchronous and non-blocking
* Callback, promise, async/await API
* Connection pool
* Typescript and ES-next syntax support
* C/C++ style guide
* Error handling harmonisation
* Descriptive error when SAP NW RFC SDK shared lib not found
* String handling optimisation
* Tables processing harmonisation and memory consumption fix
* BYTE and XSTRING unicode encoding removed